--- a/ISST-G15-ControlGlucosa/war/paciente.html
+++ b/ISST-G15-ControlGlucosa/war/paciente.html
@@ -36,8 +36,8 @@
       <ul class="sf-menu" id="example">
         <li class="current"> <a href="userData.html">Consulta de datos</a></li>
         <li> <a href="enterData.html">Formulario</a></li>
-        <li> <a href="userProfile.html">Perfil</a></li>
-        <li> <a href="index.html">Log out</a></li>
+        <li> <a href="userProfile.jsp">Perfil</a></li>
+        <li> <a href="logOut">Log out</a></li>
       </ul>
     </div>
      </div>
