--- a/ISST-G15-ControlGlucosa/war/enterData.html
+++ b/ISST-G15-ControlGlucosa/war/enterData.html
@@ -67,8 +67,8 @@
       <ul class="sf-menu" id="example">
         <li><a href="userData.html">Consulta de datos</a></li>
         <li class="current"> <a href="enterData.html">Formulario</a></li>
-        <li> <a href="userProfile.html">Perfil</a></li>
-        <li> <a href="index.html">Log Out</a></li>
+        <li> <a href="userProfile.jsp">Perfil</a></li>
+        <li> <a href="logOut">Log Out</a></li>
       </ul>
     </div>
   </div>
