--- a/ISST-G15-ControlGlucosa/war/paciente.html
+++ b/ISST-G15-ControlGlucosa/war/paciente.html
@@ -34,8 +34,8 @@
     </div>
     <div class="menu">
       <ul class="sf-menu" id="example">
-        <li class="current"> <a href="userData.html">Consulta de datos</a></li>
-        <li> <a href="enterData.html">Formulario</a></li>
+        <li class="current"> <a href="userData.jsp">Consulta de datos</a></li>
+        <li> <a href="enterData.jsp">Formulario</a></li>
         <li> <a href="userProfile.jsp">Perfil</a></li>
         <li> <a href="logOut">Log out</a></li>
       </ul>
